# rceditor

./: CMakeLists.txt  README.md
data/prototype/favorite/: SaveTest1.fav  SaveTest10.fav  SaveTest11.fav  SaveTest12.fav  SaveTest13.fav  SaveTest2.fav  SaveTest3.fav  SaveTest4.fav  SaveTest5.fav  SaveTest6.fav  SaveTest7.fav  SaveTest8.fav  SaveTest9.fav
data/prototype/task/: Host.task  HostToVulkan.task  Vulkan.task  VulkanToHost.task
data/prototype/test1/: 1111111111.tmp  CompositeNode.tmp  CreateBuffer.tmp  CreateImage.tmp  End.tmp  GetTextureInfoFrom11.tmp  GetTextureInfoFrom22.tmp  GetTextureInfoFrom33.tmp  PostProcessing.tmp  SaveNodeTest12.tmp  Start.tmp
data/prototype/test2/: GetTextureInfoFrom2.tmp
data/prototype/test4/test3/: GetTextureInfoFrom3.tmp
data/rcdata/: test1.rc  test10.rc  test11.rc  test12.rc  test13.rc  test14.rc  test15.rc  test16.rc  test17.rc  test18.rc  test2.rc  test3.rc  test4.rc  test5.rc  test6.rc  test7.rc  test8.rc  test9.rc
data/shader/: test.frag
lib/debug/windows/x86_64/: glfw3.lib
misc/cmake-modules/: FindScopeGuard.cmake  Findimgui.cmake  Findimgui_node_editor.cmake
rctemplate/task/: CommandBuffer.xml
rctemplate/test1/: 1111111111.xml  CompositeNode.xml  End.xml  GetTextureInfoFrom11.xml  GetTextureInfoFrom22.xml  GetTextureInfoFrom33.xml  GetTextureInfoFrom44.xml  SaveNodeTest.xml  SaveNodeTest2.xml  Start.xml  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml
rctemplate/test2/: GetTextureInfoFrom2.xml
rctemplate/test4/test3/: GetTextureInfoFrom3.xml
src/application/: CMakeLists.txt
src/application/private/: application.cpp  entry_point.cpp  platform_win32.cpp  renderer_dx11.cpp
src/application/public/: application.h  platform.h
src/application/support/: Resource.rc.in
src/base/: CMakeLists.txt
src/base/private/: crude_json.cpp  nodemanager.cpp  pugixml.cpp  tinyxml2.cpp
src/base/public/: base.h  nodemanager.h  type.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h  imfilebrowser.h  node.cpp  node.h  nodemanager.cpp  nodemanager.h  paraminfo.cpp  paraminfo.h  prototype.cpp  prototype.h
src/editor/utilities/: builders.cpp  builders.h  drawing.cpp  drawing.h  widgets.cpp  widgets.h
src/imgui_node_editor/: CMakeLists.txt  imgui_canvas.h  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_api.cpp  imgui_node_editor_internal.h
