project(base)

set(RC_EDITOR_BASE_SOURCES "")
file(GLOB_RECURSE RC_EDITOR_BASE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${RC_EDITOR_DEF_SOURCEEXTS})

add_library(base STATIC)
target_include_directories(base PUBLIC ${RC_EDITOR_GLOBAL_INCLUDEDIRS})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${RC_EDITOR_BASE_SOURCES})
target_sources(base PRIVATE ${RC_EDITOR_BASE_SOURCES})